# projet-integration-sri-2022-2023

./: CONTRIBUTIONS.md  Evaluation.md  README.md
aip_gazebo/: CMakeLists.txt  package.xml
aip_gazebo/config/: joints.yaml
aip_gazebo/launch/: aip_gazebo.launch  groixPorquerollles.launch  groix_porquerolles.launch  mfja_gazebo.launch  shuttle_controllers.launch  shuttle_only.launch
aip_gazebo/models/: Cellule_lite.stl  aiguillage.urdf.xacro  cellule.urdf.xacro  shuttle.urdf.xacro
aip_gazebo/world/: groixPorquerollles.world
aip_multitiago/: CMakeLists.txt  README.md  mvmts_predef.txt  package.xml  test.py
map/: good_map.yaml  salle.yaml
motion_planning/: CMakeLists.txt  DOCUMENTATION.md  README.md  package.xml
multitiago/: README.md  ReadME.md  mvmts_predef.txt  package.xml
navigation/: CMakeLists.txt  README.md  package.xml
perception/: CMakeLists.txt  package.xml
pmb2_conveyor_control/: CMakeLists.txt  README.md  package.xml  setup.py
project_integration_sri_2020_2021/: CMakeLists.txt  package.xml
project_integration_sri_2021_2022/: CMakeLists.txt  package.xml
sri_tiago_multirobot/: readme.md
sri_tiago_navigation/: CMakeLists.txt  CMakeLists.txt~HEAD  README.md  README.md~HEAD  package.xml
sri_tiago_pick/: CMakeLists.txt  README.md  package.xml
sri_tiago_pick_and_place_simulation/: CMakeLists.txt  README.md  package.xml
sri_transport_object_42/: CMakeLists.txt  README.md  package.xml
tiago_demo_sri_g2_2021/: CMakeLists.txt  package.xml
tiago_place/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
(+124 files in other folders)
