<?xml version="1.0"?>
<package format="2">
  <name>project_integration_sri_2021_2022</name>
  <version>0.0.0</version>
  <description>The project_integration_sri_2021_2022 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache</license>


  <buildtool_depend>catkin</buildtool_depend>



  <export>
    <metapackage />
  </export>
</package>
